Bug 62287 - FORMATTING: programme crash when applying gradient to Impress master page background
Summary: FORMATTING: programme crash when applying gradient to Impress master page bac...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.0.1.2 release
Hardware: Other macOS (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.1.0 target:4.0.3
Keywords:
: 61551 63568 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-03-13 11:02 UTC by Patrick
Modified: 2013-12-17 13:36 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Crash report impress gradient master (50.70 KB, text/rtf)
2013-03-20 15:16 UTC, Thiago van Dieten
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick 2013-03-13 11:02:41 UTC
Problem description: 
The programme crashed when setting a gradient as backgroudn for the master page.


Steps to reproduce:
1. In the Master/SlideMaster View, choose Format/Page
2. Select the background tab and choose any gradient in the dropbox list....
3. click OK

Current behavior: programm crashes

Expected behavior: Impress changes the background of the master page



              
Operating System: Mac OS X
Version: 4.0.1.2 release
Comment 1 Julien Nabet 2013-03-16 17:17:05 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce this.

Patrick: could you give extra information by following this link https://wiki.documentfoundation.org/BugReport#How_to_get_debug_information_on_Mac_OS_X ?
Comment 2 Thiago van Dieten 2013-03-20 15:16:21 UTC
Created attachment 76824 [details]
Crash report impress gradient master

Seeing I have the same problem on the same OS (not sure about the version though) , I will share my own crash report.
Comment 3 Julien Nabet 2013-03-20 21:10:14 UTC
Thiago: thank you for the crash report!
Put it at New since it has been reproduced and a bt is attached.

Thorsten/Caolán: seems specific to Mac and shows vcl part, any idea?
Comment 4 Caolán McNamara 2013-04-09 08:57:03 UTC
can confirm it crashed on macosx on 4.0.2.2, master didn't for me though
Comment 5 Caolán McNamara 2013-04-09 15:07:02 UTC
grr, if I add in some debugging fprintf then it stops crashing, a tricky bug to track down.
Comment 6 Caolán McNamara 2013-04-09 19:17:58 UTC
re-using a dead AquaSalFrame
Comment 7 Commit Notification 2013-04-09 19:24:39 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=43a23fb3f8f1ffa4937658dd9393d23533b84d18

Related: fdo#62287 make it impossible to use a dead AquaSalFrame



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2013-04-09 19:33:50 UTC
fixed on master, proposed squashed collection of commits to resolve it in 4-0 as https://gerrit.libreoffice.org/#/c/3295/
Comment 9 Commit Notification 2013-04-11 06:31:22 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1061de77bb8927defb372df31899fddc7ace237d&h=libreoffice-4-0

Resolves: fdo#62287 avoid a crash on OSX on reusing a dead AquaSalFrame


It will be available in LibreOffice 4.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2013-05-03 10:57:39 UTC
*** Bug 61551 has been marked as a duplicate of this bug. ***
Comment 11 Julien Nabet 2013-05-04 06:56:12 UTC
*** Bug 63568 has been marked as a duplicate of this bug. ***
Comment 12 Wenqing Zhou 2013-05-04 21:48:29 UTC
It is fixed on daily build : Version 4.0.4.0+ (Build ID: 19e60e1a0507e041bbbbd2bf639782e990f7a55)
TinderBox: MacOSX-Intel@27-OSX_10.7.0-gcc_4.2.1_llvm, Branch:libreoffice-4-0, Time: 2013-05-03_14:30:25

MODEL:MBP2011
MACOS: 10.7.5